--- a/about/templates/about/about.html
+++ b/about/templates/about/about.html
@@ -7,7 +7,7 @@
 <div class="container mt-5">
     <div class="row">
         <div class="col-12 col-md-4 text-center">
-            <img src="{% static 'images/nobody.jpg' %}" width="75%">
+            <img src="{% static 'images/nobody.jpg' %}" class="img-fluid w-75" alt="About image">
         </div>
         <div class="col-12 col-md-8">
             <h2>{{ about.title }}</h2>
