--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 {% load static %}
+{% load cloudinary %}
 {% block content %}
 
 <!-- index.html content starts here -->
@@ -18,7 +19,7 @@
                                 <img class="card-img-top" src="{% static 'images/default.jpg' %}"
                                 alt="placeholder image">
                                 {% else %}
-                                <img class="card-img-top" src=" {{ post.featured_image.url }}" alt="{{ post.title }}">
+                                {% cloudinary post.featured_image width=350 height=200 crop="fill" class="card-img-top" alt=post.title %}
                                 {% endif %}
                                 <div class="image-flash">
                                     <p class="author">Author: {{ post.author }}</p>
