--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %} {% block content %}
 {% load static %}
 {% load crispy_forms_tags %}
+{% load cloudinary %}
 
 <div class="masthead">
     <div class="container">
@@ -15,7 +16,7 @@
                 {% if "placeholder" in post.featured_image.url %}
                 <img src="{% static 'images/default.jpg' %}" class="scale" alt="placeholder">
                 {% else %}
-                <img src="{{ post.featured_image.url }}" class="scale" alt="{{ post.title }}">
+                {% cloudinary post.featured_image width=600 height=400 crop="fill" class="scale" alt=post.title %}
                 {% endif %}
             </div>
         </div>
