--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -29,9 +29,9 @@
             <div class="card-body">
                 <!-- The post content goes inside the card-text. -->
                 <!-- Use the | safe filter inside the template tags -->
-                <p class="card-text">
+                <div class="card-text">
                     {{ post.content | safe }}
-                </p>
+                </div>
             </div>
         </div>
     </div>
